# solo-founder-os

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
scripts/: run_weekly_retro.sh
solo_founder_os/: __init__.py  agent_bus.py  anthropic_client.py  autopsy.py  bandit.py  baseline.py  batch.py  brief.py  cli.py  council.py  cron.py  cross_agent_report.py  doctor.py  eval.py  evolver.py  governance.py  hitl_queue.py  http.py  morning_brief.py  notifier.py  preference.py  reflection.py  scheduler.py  skills.py  source.py  stack_flow.py  supervisor.py  sync.py  testing.py  ui.py  usage_log.py
tests/: test_agent_bus.py  test_autopsy.py  test_bandit.py  test_baseline.py  test_batch_and_structured.py  test_council.py  test_cron.py  test_cross_agent_report.py  test_doctor.py  test_eval.py  test_evolver.py  test_governance.py  test_hitl_queue_and_cli.py  test_http.py  test_morning_brief.py  test_notifier_and_brief.py  test_preference.py  test_reflection.py  test_scheduler.py  test_skills.py  test_source.py  test_stack_flow.py  test_supervisor.py  test_sync.py  test_ui.py  test_usage_log_and_anthropic.py
