[project]
name = "solo-founder-os"
version = "0.9.0"
description = "Shared base library for the Solo Founder OS agent stack — Source/MetricSample, baseline w/ rotation, HTTP retry, Anthropic client, notifiers (ntfy/Telegram/Slack), brief composer, testing helpers."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["agent", "library", "anthropic", "claude", "indie", "solo-founder"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "anthropic>=0.40"]

[project.scripts]
sfos-doctor = "solo_founder_os.doctor:main"
sfos-supervisor = "solo_founder_os.supervisor:main"

[project.urls]
Repository = "https://github.com/alex-jb/solo-founder-os"
Issues = "https://github.com/alex-jb/solo-founder-os/issues"
Homepage = "https://github.com/alex-jb/solo-founder-os"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["solo_founder_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length: docstrings + log messages run long; not a bug
    "E731",  # lambda-assignment: idiomatic in tests
    "E402",  # module-level import not at top: __future__ + sys.path tricks
    "E702",  # multiple-statements-on-one-line: idiomatic in test fixtures
    "E741",  # ambiguous-variable-name: short loop vars are fine in context
]
